--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,10 +8,10 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
 # install basics
 RUN apt-get update -y \
  && apt-get install -y apt-utils git curl ca-certificates bzip2 cmake tree htop bmon iotop g++ \
- && apt-get install -y libglib2.0-0 libsm6 libxext6 libxrender-dev
+ && apt-get install -y libglib2.0-0 libsm6 libxext6 libxrender-dev libyaml-dev vim zsh wget htop tmux
 
 # Install Miniconda
-RUN curl -so /miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh \
+RUN curl -so /miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
  && chmod +x /miniconda.sh \
  && /miniconda.sh -b -p /miniconda \
  && rm /miniconda.sh
@@ -28,12 +28,13 @@ ENV CONDA_PREFIX=/miniconda/envs/$CONDA_DEFAULT_ENV
 ENV PATH=$CONDA_PREFIX/bin:$PATH
 ENV CONDA_AUTO_UPDATE_CONDA=false
 
-RUN conda install -y ipython
-RUN pip install requests ninja yacs numpy cython matplotlib opencv-python tqdm \
- progressbar protobuf tensorboardx tensorboard tensorflow nltk pymongo pandas joblib \
- sklearn boto3 scikit-image
+RUN conda install -y ipython h5py nltk joblib jupyter pandas scipy
+RUN pip install requests ninja cython yacs=0.1.8 numpy=1.19.5 cython matplotlib opencv-python tqdm \
+ protobuf tensorboardx pymongo sklearn boto3 scikit-image cityscapesscripts
 RUN pip install azureml-defaults>=1.0.45 azureml.core inference-schema
 RUN pip --no-cache-dir install --force-reinstall -I pyyaml
+
+RUN python -m nltk.downloader punkt
 
 # Install latest PyTorch 1.4
 ARG CUDA
@@ -54,8 +55,14 @@ RUN git clone https://github.com/NVIDIA/apex.git \
 ARG FORCE_CUDA="1"
 ENV FORCE_CUDA=${FORCE_CUDA}
 
-RUN git clone https://github.com/hanxiaotian/scene_graph_benchmark.git \
- && cd scene_graph_benchmark \
- && python setup.py build develop
+RUN wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh || true
+RUN echo """export ZSH="/root/.oh-my-zsh"\nZSH_THEME="gentoo"\nplugins=(git)\nsource \$ZSH/oh-my-zsh.sh""" > /root/.zshrc
+RUN echo """syntax on\nfiletype indent on\nset autoindent\nset number\ncolorscheme desert""" > /root/.vimrc
 
-WORKDIR /scene_graph_benchmark
+CMD [ "zsh" ]
+
+# RUN git clone https://github.com/hanxiaotian/scene_graph_benchmark.git \
+#  && cd scene_graph_benchmark \
+#  && python setup.py build develop
+
+# WORKDIR /scene_graph_benchmark
