fix bugs in dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,7 +29,7 @@ ENV PATH=$CONDA_PREFIX/bin:$PATH
 ENV CONDA_AUTO_UPDATE_CONDA=false
 
 RUN conda install -y ipython h5py nltk joblib jupyter pandas scipy
-RUN pip install requests ninja cython yacs=0.1.8 numpy=1.19.5 cython matplotlib opencv-python tqdm \
+RUN pip install requests ninja cython yacs>=0.1.8 numpy>=1.19.5 cython matplotlib opencv-python tqdm \
  protobuf tensorboardx pymongo sklearn boto3 scikit-image cityscapesscripts
 RUN pip install azureml-defaults>=1.0.45 azureml.core inference-schema
 RUN pip --no-cache-dir install --force-reinstall -I pyyaml
