--- a/checkpoints/causal_tde/rel_danfeiX_FPN50_nm.yaml
+++ b/checkpoints/causal_tde/rel_danfeiX_FPN50_nm.yaml
@@ -8,7 +8,7 @@ MODEL:
     BACKBONE_OUT_CHANNELS: 256
   BACKBONE:
     CONV_BODY: "R-50-FPN"
-  ATTRIBUTE_ON: False
+  ATTRIBUTE_ON: True
   RELATION_ON: True
   RPN:
     USE_FPN: True
